--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,39 @@
 plugins {
-    id 'java-library'
+    id "java"
+    id "io.qameta.allure" version "2.8.1"
 }
 
 repositories {
     mavenCentral()
 }
 
+allure {
+    version = "2.15.0"
+    autoconfigure = true
+    configuration = "testImplementation"
+
+    useJUnit5 {
+        version = "2.15.0"
+    }
+}
+
 dependencies {
-    testImplementation("com.codeborne:selenide:5.24.0",
+    testImplementation(
+            "com.codeborne:selenide:5.22.3",
+            "io.qameta.allure:allure-selenide:2.15.0",
             "com.github.javafaker:javafaker:1.0.2",
-            "org.junit.jupiter:junit-jupiter:5.7.1")
-    testRuntimeOnly("org.slf4j:slf4j-simple:1.7.29",
-            "org.junit.jupiter:junit-jupiter-engine:5.7.1")
+            "org.junit.jupiter:junit-jupiter:5.7.2"
+    )
+    testRuntimeOnly(
+            "org.slf4j:slf4j-simple:1.7.29",
+            "org.junit.jupiter:junit-jupiter-engine:5.7.2"
+    )
 }
 
 test {
     useJUnitPlatform()
+}
+
+configurations {
+    testCompile
 }
